--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@emotion/styled": "^11.11.0",
     "@mantine/core": "^6.0.11",
     "@reduxjs/toolkit": "^1.9.5",
+    "@tabler/icons": "^2.19.0",
+    "@tabler/icons-react": "^2.19.0",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
@@ -15,6 +17,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-hot-toast": "^2.4.1",
     "react-loader-spinner": "^5.3.4",
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
@@ -45,5 +48,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-router-dom": "^6.11.2"
   }
 }
